--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@babel/preset-react": "^7.13.13",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.34",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
@@ -21,8 +21,11 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
+        "sass": "^1.43.4",
         "sass-loader": "^11.0.1",
         "vue-loader": "^15.9.8"
+    },
+    "dependencies": {
+        "jquery-validation": "^1.19.3"
     }
 }
